--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -56,3 +56,5 @@ models:
       - github.com/99designs/gqlgen/graphql.Int32
   Timestamp:
     model: github.com/99designs/gqlgen/example/scalars/model.Timestamp
+  Map:
+    model: github.com/j75689/Tmaster/pkg/graph/scalar.Map
