--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -16,7 +16,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.15.x]
+        go-version: [1.16.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -28,7 +28,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Wire
       run: |
+        go mod tidy
         go get github.com/google/wire/cmd/wire
-        wire ./...
+        wire ./service/...
     - name: Test
       run: go test ./...
