--- a/deployment/kustomize/base/worker/deployment.yaml
+++ b/deployment/kustomize/base/worker/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         accesslog-filter-injection: enabled
     spec:
       containers:
-        - image: Tmaster
+        - image: ghcr.io/j75689/tmaster/tmaster:latest
           imagePullPolicy: Always
           name: Tmaster-worker
           args:
@@ -49,7 +49,7 @@ spec:
               name: pubsub-credentials
               subPath: pubsub_credentials.json
       initContainers:
-        - image: Tmaster
+        - image: ghcr.io/j75689/tmaster/tmaster:latest
           imagePullPolicy: Always
           name: Tmaster-migration
           args:
@@ -59,7 +59,7 @@ spec:
           volumeMounts:
             - mountPath: /Tmaster/config
               name: config
-        - image: Tmaster
+        - image: ghcr.io/j75689/tmaster/tmaster:latest
           imagePullPolicy: Always
           name: Tmaster-initmq
           args:
