--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,14 +20,20 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . -f ./build/Dockerfile -t "${IMAGE_NAME}"
+        run: |
+          docker build . \
+            --label "org.opencontainers.image.source=https://github.com/j75689/Tmaster" \
+            --label "org.opencontainers.image.revision=$(git rev-parse HEAD)" \
+            --label "org.opencontainers.image.version=$(git describe --tags --abbrev=0)" \
+            --label "org.opencontainers.image.licenses=MIT" \
+            -f ./build/Dockerfile -t "${IMAGE_NAME}"
 
       - name: Log into registry
-        run: echo "${{ secrets.PACKAGE_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.PACKAGE_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push image
         run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository }}
           
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
